--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
-<h1>Upload File</h1>
-
+{% extends "base.html" %}
+{% block title %}Upload{% endblock %}
+{% block body %}
 <form enctype="multipart/form-data" method="post">
     <input type="file" accept=".csv,.json" name="file">
     <button type="submit">Submit</button>
@@ -7,3 +8,4 @@
         {{ errors }}
     {% endif %}
 </form>
+{% endblock %}
