--- a/templates/cards.html
+++ b/templates/cards.html
@@ -23,7 +23,7 @@
                             {% autoescape false %}
                             <h4>{{ meaning }}</h4>
                             {% if example %}
-                            <h5>{{ example }}</h5>
+                            <h4 class="mt-5 text-secondary">{{ example }}</h4>
                             {% endif %}
                             {% endautoescape %}
                             <form method="post" class="form form-horizontal mt-5">
@@ -44,15 +44,18 @@
     </div>
 </div>
 <div class="container mt-5">
-    <div class="progress mt-3">
+    <p class="mt-3 mb-1 text-light">You have mastered {{ n_mastered }} out of {{ total }} words</p>
+    <div class="progress">
         <div class="progress-bar bg-success" role="progressbar" style="width: {{ mastered }}%" aria-valuenow="" aria-valuemin="0"
             aria-valuemax="{{ total }}"></div>
     </div>
-    <div class="progress mt-3">
+    <p class="mt-3 mb-1 text-light">You are reviewing {{ n_reviewing }} out of {{ total }} words</p>
+    <div class="progress">
         <div class="progress-bar bg-warning" role="progressbar" style="width: {{ reviewing }}%" aria-valuenow="" aria-valuemin="0"
             aria-valuemax="{{ total }}"></div>
     </div>
-    <div class="progress mt-3">
+    <p class="mt-3 mb-1 text-light">You are learning {{ n_learning }} out of {{ total }} words</p>
+    <div class="progress">
         <div class="progress-bar bg-danger" role="progressbar" style="width: {{ learning }}%" aria-valuenow="" aria-valuemin="0"
             aria-valuemax="{{ total }}"></div>
     </div>
